# OBC

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  Dockerfile  FreeRTOSEnv.rar  Makefile  OBC.ioc  README.md  STM32F411RETX_FLASH.ld  STM32F411RETX_RAM.ld  autobuild.sh  how_to_WAF_libcsp.md  how_to_WAF_libcsp.txt  temp Debug.launch  temp.ioc
.github/workflows/: build.yml  main.yml
Core/: CMakeLists.txt
Core/Inc/: CMakeLists.txt  CSP_Client_Task.h  CSP_Server_Task.h  FreeRTOSConfig.h  FreeRTOSFATConfig.h  csp_i2c_settings.h  endian.h  kiss_uart_interface.h  main.h  my_csp_hooks.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  task1_ale.h  task2.h  task2_ale.h  task_fat_init.h  task_gianluca.h  timer_utils.h  usart_driver_freeRTOS.h  vCSP_Client.h  vCSP_Server.h
Core/Src/: CMakeLists.txt  CSP_Client_Task.c  CSP_Server_Task.c  csp_i2c_settings.c  freertos.c  kiss_uart_interface.c  main.c  my_csp_hooks.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c  task2.c  task_fat_init.c  task_gianluca.c  timer_utils.c  usart_driver_freeRTOS.c  vCSP_Client.c  vCSP_Server.c  vTask1.c  vTask2Ale.c  vTaskAle.c
Core/Startup/: CMakeLists.txt
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
Drivers/STM32F4xx_HAL_Driver/Inc/: CMakeLists.txt  stm32f4xx_ll_rcc.h
Drivers/STM32F4xx_HAL_Driver/Src/: CMakeLists.txt
FreeRTOSEnv/: FreeRTOSEnv.atsln
FreeRTOSEnv/FreeRTOSEnv/: FreeRTOSEnv.componentinfo.xml  FreeRTOSEnv.cproj
FreeRTOSEnv/FreeRTOSEnv/src/: asf.h  main.c
FreeRTOSEnv/FreeRTOSEnv/src/config/: FreeRTOSConfig.h  conf_board.h
Libraries/include/csp/: autoconfig.h
